# rdflib-plus

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
rdflib_plus/: __init__.py  config.py
rdflib_plus/_DEPRECATED/: _DEPRECATED_custom_namespace.py  parse.py
rdflib_plus/definitions/: __init__.py  constraints.py  definition_classes.yaml  definition_properties.yaml  parse_classes.py  parse_properties.py  utils.py
rdflib_plus/graphs/: __init__.py  build.py  graph.py  multi_graph.py  simple_graph.py
rdflib_plus/models/: __init__.py  owl_ontology.py  owl_properties.py  owl_resources.py  rdf_property.py  rdfs_class.py  rdfs_resource.py  resource.py  types.py  utils.py
rdflib_plus/namespace/: __init__.py  custom_namespace.py  namespaces.py  utils.py
rdflib_plus/namespaces/: __init__.py  build.py  define.py  namespaces.py  parse.py  utils.py
rdflib_plus/utils/: __init__.py  config.py  format.py  load.py  namespaces.py  parse.py  types.py  utils.py
tests/: definition_properties_example.yaml  test_graph.py  test_rdfs_resource.py  test_str.py  utils.py
tests/parameters/: __init__.py  element_lists.py  element_lists_with_check.py  elements.py  elements_with_check.py  identifiers.py  key_functions.py  labels.py  langs.py  models.py  namespaces.py  paths.py  properties.py  versions.py
tests/tests_add/: test_resource.py
tests/tests_graph/: TODO_test_simplegraph.py
tests/tests_init/: TODO_test_ontology.py  test_alt.py  test_bag.py  test_blank_node_object.py  test_class_property.py  test_collection.py  test_labeled_object.py  test_list.py  test_ontology.py  (+4 more)
(+58 files in other folders)
