[tool.poetry]
name = "rdflib-plus"
version = "0.1.0"
description = ""
authors = ["Florian Abeillon <florian.abeillon@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0.0"
inflection = "^0.5.1"
black = "^23.9.1"
langcodes = "^3.3.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
